sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:24: error: value d is not a member of Unit
possible cause: maybe a semicolon is missing before `value d'?
	 }	d=d+1
                ^